Thu Jan  2 00:25:03 1998  Peter Silva <peter.silva@videotron.ca>
	* added modem_in_connect_state, and checks for it
          to avoid unneccessary delays on modem initialization.
	  delay of 2 seconds will still occur on hangup by default.
	  I think that's bearable.
	* Added modem tricks section, gentle introduction.

Thu Dec 25 11:46:34 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

        * Added new script keywords: PwPrompt and ID
	* Added ID and Password LineEdits on the main dialog window
	* KConfig transition is now complete, one more time the data
	  storage format has changed. ( Hopefully the last time )

	* All sorts of little cosmetic changes
	* fixed up the mini-terminal a bit

Sun Dec 22 23:00:03 1997  Peter Silva <peter.silva@videotron.ca>

	* To fix hangup problems:
	* Added programmable guard time around escape sequence
	* Separated escape sequence from hangup command

Sun Dec 21 10:19:18 1997  Peter Silva <peter.silva@videotron.ca>

	* Changed maxloopnest to MAXLOOPNEST for portability reasons 
	  (See developers guide, about const int)
	* Set window titles when connected to account name.

Fri Dec 19 22:49:18 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* Extended the grammar of the tarif rules. 
	  New keyword: flat_init_costs necessitated by the new french
	  accounting rules.

Tue Dec 16 01:54:50 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* extended scripting capabilities to allow password dialogs

Sun Nov  2 14:02:31 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* accounts.cpp: applied mario's patches to the rulessets. Now deals
	  with fractions too. 
	* accounts.cpp: fixed the bug that caused kppp to reset the costs 
	  even if you chose cancel.
	* docs/kppp.sgml: doc updates and corrections

Fri Aug 15 21:25:05 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* connect.cpp: leaving the lock file name edit blank will cause