@@ -26,7 +26,6 @@
 #ifndef _GENERAL_H_
 #define _GENERAL_H_
 
-
 #include <string.h>
 
 #include <qwidget.h>
